dataset1235/2025-2/805158916/users/3563627350/executions/1584167357_2935826613.log
== SUBMISSION (2025-08-27 15:03:57)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:59:56)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:01:38)
-- CODE: 
celsius = float(imput())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:53:47)
-- CODE: 
celsius = (input())
fahrenheit = (celsius * 9/5) + 32
print(round(fahrenheit, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:00:12)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:53:38)
-- CODE: 
celsius = (input())
fahrenheit = (celsius * 9/5) + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:02:29)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:50)
-- CODE: 
celsius = (input())
fahrenheit = (celsius * 9/5) + 32
print(round(fahrenheit, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:53:52)
-- CODE: 
celsius = (input())
fahrenheit = (celsius * 9/5) + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:55:54)
-- CODE: 
celsius = float(input())
fahrenheit = (celsius * 9/5) + 32
print(round(fahrenheit, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:03:14)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:06:08)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:16)
-- CODE: 
celsius = (input())
fahrenheit = (celsius * 9/5) + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:01:29)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:55:43)
-- CODE: 
celsius = int(input())
fahrenheit = (celsius * 9/5) + 32
print(round(fahrenheit, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:56:24)
-- CODE: 
celsius = (input())
fahrenheit = celsius * 9/5 + 32
print(round(fahrenheit, 1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit, 1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
